--- a/index.html
+++ b/index.html
@@ -190,11 +190,13 @@ Artwork by [@allison_horst](https://www.allisonhorst.com/)]
 
 --
 
-- Free gift! Data packages are an enormously useful tool for teaching purposes (how many times have you used the [`{iris}` 📦](https://archive.ics.uci.edu/ml/datasets/iris)??!!) 
+- Free gift! Data packages are an enormously useful tool for teaching purposes (how many times have you used the [`{iris}` dataset [1]](https://en.wikipedia.org/wiki/Iris_flower_data_set)??!!) 
+
+.footnote[R. A. Fisher (1936). "The use of multiple measurements in taxonomic problems". Annals of Eugenics. 7 (2): 179–188. doi:10.1111/j.1469-1809.1936.tb02137.x. hdl:2440/15227]
 
 ---
 
-## 🐧 `{palmerpenguins}` : An alternative to `{iris}` 📦
+## 🐧 `{palmerpenguins}` is the new `{iris}` 🌷
 
 .pull-left[
 #### Authors: Allison Horst, Alison Hill, Kristen Gorman
@@ -242,14 +244,15 @@ penguins %&gt;% head()
 
 ```
 ## # A tibble: 6 × 8
-##   species island    bill_length_mm bill_depth_mm flipper_length_mm body_mass_g sex     year
-##   &lt;fct&gt;   &lt;fct&gt;              &lt;dbl&gt;         &lt;dbl&gt;             &lt;int&gt;       &lt;int&gt; &lt;fct&gt;  &lt;int&gt;
-## 1 Adelie  Torgersen           39.1          18.7               181        3750 male    2007
-## 2 Adelie  Torgersen           39.5          17.4               186        3800 female  2007
-## 3 Adelie  Torgersen           40.3          18                 195        3250 female  2007
-## 4 Adelie  Torgersen           NA            NA                  NA          NA &lt;NA&gt;    2007
-## 5 Adelie  Torgersen           36.7          19.3               193        3450 female  2007
-## 6 Adelie  Torgersen           39.3          20.6               190        3650 male    2007
+##   species island bill_length_mm bill_depth_mm flipper_length_… body_mass_g sex  
+##   &lt;fct&gt;   &lt;fct&gt;           &lt;dbl&gt;         &lt;dbl&gt;            &lt;int&gt;       &lt;int&gt; &lt;fct&gt;
+## 1 Adelie  Torge…           39.1          18.7              181        3750 male 
+## 2 Adelie  Torge…           39.5          17.4              186        3800 fema…
+## 3 Adelie  Torge…           40.3          18                195        3250 fema…
+## 4 Adelie  Torge…           NA            NA                 NA          NA &lt;NA&gt; 
+## 5 Adelie  Torge…           36.7          19.3              193        3450 fema…
+## 6 Adelie  Torge…           39.3          20.6              190        3650 male 
+## # … with 1 more variable: year &lt;int&gt;
 ```
 
 
@@ -559,8 +562,8 @@ p &lt;- penguins %&gt;%
 p
 ```
 
-<div id="htmlwidget-7c68316310412fd4ed70" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7c68316310412fd4ed70">{"x":{
+<div id="htmlwidget-8f6290a3c900688c6b58" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-8f6290a3c900688c6b58">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
@@ -4326,7 +4329,7 @@ p
     "layer": [
       {
         "selection": {
-          "id2248e9d2": {
+          "id3afbe5be": {
             "type": "interval",
             "encodings": ["x", "y"],
             "init": null,
@@ -4367,7 +4370,7 @@ p
           },
           "color": {
             "condition": {
-              "selection": "id2248e9d2",
+              "selection": "id3afbe5be",
               "field": "species",
               "type": "nominal",
               "sort": ["Adelie", "Chinstrap", "Gentoo"],
@@ -4482,8 +4485,8 @@ p_right &lt;- penguins %&gt;%
 p_right
 ```
 
-<div id="htmlwidget-9811e33987ffd7c39762" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-9811e33987ffd7c39762">{"x":{
+<div id="htmlwidget-02b9f7ffb831b8758942" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-02b9f7ffb831b8758942">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
@@ -7934,7 +7937,7 @@ p_right
           }
         },
         "selection": {
-          "id2248e9d2": {
+          "id3afbe5be": {
             "type": "interval",
             "encodings": ["x", "y"],
             "init": null,
@@ -7958,7 +7961,7 @@ p_right
         "transform": [
           {
             "filter": {
-              "selection": "id2248e9d2"
+              "selection": "id3afbe5be"
             }
           }
         ],
@@ -7996,7 +7999,7 @@ p_right
         "transform": [
           {
             "filter": {
-              "selection": "id2248e9d2"
+              "selection": "id3afbe5be"
             }
           }
         ],
@@ -8100,8 +8103,8 @@ p_right
 hconcat(p, p_right)
 ```
 
-<div id="htmlwidget-2dca5725cf3d34459dc2" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-2dca5725cf3d34459dc2">{"x":{
+<div id="htmlwidget-a3c87d2b4025e57c9cf4" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-a3c87d2b4025e57c9cf4">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "hconcat": [
@@ -11869,7 +11872,7 @@ hconcat(p, p_right)
         "layer": [
           {
             "selection": {
-              "id2248e9d2": {
+              "id3afbe5be": {
                 "type": "interval",
                 "encodings": ["x", "y"],
                 "init": null,
@@ -11910,7 +11913,7 @@ hconcat(p, p_right)
               },
               "color": {
                 "condition": {
-                  "selection": "id2248e9d2",
+                  "selection": "id3afbe5be",
                   "field": "species",
                   "type": "nominal",
                   "sort": ["Adelie", "Chinstrap", "Gentoo"],
@@ -15374,7 +15377,7 @@ hconcat(p, p_right)
               }
             },
             "selection": {
-              "id2248e9d2": {
+              "id3afbe5be": {
                 "type": "interval",
                 "encodings": ["x", "y"],
                 "init": null,
@@ -15398,7 +15401,7 @@ hconcat(p, p_right)
             "transform": [
               {
                 "filter": {
-                  "selection": "id2248e9d2"
+                  "selection": "id3afbe5be"
                 }
               }
             ],
@@ -15436,7 +15439,7 @@ hconcat(p, p_right)
             "transform": [
               {
                 "filter": {
-                  "selection": "id2248e9d2"
+                  "selection": "id3afbe5be"
                 }
               }
             ],
@@ -15733,14 +15736,15 @@ head(penguins)
 
 ```
 ## # A tibble: 6 × 8
-##   species island    bill_length_mm bill_depth_mm flipper_length_mm body_mass_g sex     year
-##   &lt;fct&gt;   &lt;fct&gt;              &lt;dbl&gt;         &lt;dbl&gt;             &lt;int&gt;       &lt;int&gt; &lt;fct&gt;  &lt;int&gt;
-## 1 Adelie  Torgersen           39.1          18.7               181        3750 male    2007
-## 2 Adelie  Torgersen           39.5          17.4               186        3800 female  2007
-## 3 Adelie  Torgersen           40.3          18                 195        3250 female  2007
-## 4 Adelie  Torgersen           NA            NA                  NA          NA &lt;NA&gt;    2007
-## 5 Adelie  Torgersen           36.7          19.3               193        3450 female  2007
-## 6 Adelie  Torgersen           39.3          20.6               190        3650 male    2007
+##   species island bill_length_mm bill_depth_mm flipper_length_… body_mass_g sex  
+##   &lt;fct&gt;   &lt;fct&gt;           &lt;dbl&gt;         &lt;dbl&gt;            &lt;int&gt;       &lt;int&gt; &lt;fct&gt;
+## 1 Adelie  Torge…           39.1          18.7              181        3750 male 
+## 2 Adelie  Torge…           39.5          17.4              186        3800 fema…
+## 3 Adelie  Torge…           40.3          18                195        3250 fema…
+## 4 Adelie  Torge…           NA            NA                 NA          NA &lt;NA&gt; 
+## 5 Adelie  Torge…           36.7          19.3              193        3450 fema…
+## 6 Adelie  Torge…           39.3          20.6              190        3650 male 
+## # … with 1 more variable: year &lt;int&gt;
 ```
 
 
@@ -15791,10 +15795,14 @@ confront(penguins, rules) %&gt;% summary()
 ```
 
 ```
-##   name items passes fails nNA error warning                                                   expression
-## 1   V1   344    342     0   2 FALSE   FALSE                                        flipper_length_mm &gt; 0
-## 2   V2   344    342     2   0 FALSE   FALSE is_complete(bill_depth_mm, flipper_length_mm, bill_depth_mm)
-## 3   V3   344    220   124   0 FALSE   FALSE       !(island %vin% "Biscoe") | (species %vin% c("Adelie"))
+##   name items passes fails nNA error warning
+## 1   V1   344    342     0   2 FALSE   FALSE
+## 2   V2   344    342     2   0 FALSE   FALSE
+## 3   V3   344    220   124   0 FALSE   FALSE
+##                                                     expression
+## 1                                        flipper_length_mm &gt; 0
+## 2 is_complete(bill_depth_mm, flipper_length_mm, bill_depth_mm)
+## 3       !(island %vin% "Biscoe") | (species %vin% c("Adelie"))
 ```
 
 
