change secondary color

--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@ p &lt;- penguins %&gt;%
 p
 ```
 
-<div id="htmlwidget-8f6290a3c900688c6b58" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-8f6290a3c900688c6b58">{"x":{
+<div id="htmlwidget-3bfe07e2299611538f29" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-3bfe07e2299611538f29">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
@@ -4329,7 +4329,7 @@ p
     "layer": [
       {
         "selection": {
-          "id3afbe5be": {
+          "id08a87f72": {
             "type": "interval",
             "encodings": ["x", "y"],
             "init": null,
@@ -4370,7 +4370,7 @@ p
           },
           "color": {
             "condition": {
-              "selection": "id3afbe5be",
+              "selection": "id08a87f72",
               "field": "species",
               "type": "nominal",
               "sort": ["Adelie", "Chinstrap", "Gentoo"],
@@ -4485,8 +4485,8 @@ p_right &lt;- penguins %&gt;%
 p_right
 ```
 
-<div id="htmlwidget-02b9f7ffb831b8758942" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-02b9f7ffb831b8758942">{"x":{
+<div id="htmlwidget-47b196a3e70ea64b6f2e" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-47b196a3e70ea64b6f2e">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
@@ -7937,7 +7937,7 @@ p_right
           }
         },
         "selection": {
-          "id3afbe5be": {
+          "id08a87f72": {
             "type": "interval",
             "encodings": ["x", "y"],
             "init": null,
@@ -7961,7 +7961,7 @@ p_right
         "transform": [
           {
             "filter": {
-              "selection": "id3afbe5be"
+              "selection": "id08a87f72"
             }
           }
         ],
@@ -7999,7 +7999,7 @@ p_right
         "transform": [
           {
             "filter": {
-              "selection": "id3afbe5be"
+              "selection": "id08a87f72"
             }
           }
         ],
@@ -8103,8 +8103,8 @@ p_right
 hconcat(p, p_right)
 ```
 
-<div id="htmlwidget-a3c87d2b4025e57c9cf4" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
-<script type="application/json" data-for="htmlwidget-a3c87d2b4025e57c9cf4">{"x":{
+<div id="htmlwidget-745a7b36e6101d974a94" style="width:auto;height:auto;" class="vegawidget html-widget"></div>
+<script type="application/json" data-for="htmlwidget-745a7b36e6101d974a94">{"x":{
   "chart_spec": {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "hconcat": [
@@ -11872,7 +11872,7 @@ hconcat(p, p_right)
         "layer": [
           {
             "selection": {
-              "id3afbe5be": {
+              "id08a87f72": {
                 "type": "interval",
                 "encodings": ["x", "y"],
                 "init": null,
@@ -11913,7 +11913,7 @@ hconcat(p, p_right)
               },
               "color": {
                 "condition": {
-                  "selection": "id3afbe5be",
+                  "selection": "id08a87f72",
                   "field": "species",
                   "type": "nominal",
                   "sort": ["Adelie", "Chinstrap", "Gentoo"],
@@ -15377,7 +15377,7 @@ hconcat(p, p_right)
               }
             },
             "selection": {
-              "id3afbe5be": {
+              "id08a87f72": {
                 "type": "interval",
                 "encodings": ["x", "y"],
                 "init": null,
@@ -15401,7 +15401,7 @@ hconcat(p, p_right)
             "transform": [
               {
                 "filter": {
-                  "selection": "id3afbe5be"
+                  "selection": "id08a87f72"
                 }
               }
             ],
@@ -15439,7 +15439,7 @@ hconcat(p, p_right)
             "transform": [
               {
                 "filter": {
-                  "selection": "id3afbe5be"
+                  "selection": "id08a87f72"
                 }
               }
             ],
